# backend-fight-api

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  docs.md  haproxy.cfg  info.json  nginx.conf
docs/: detection-rules.md  partitions-build.md
scripts/: build_index.rs
src/: main.rs
src/data/: OFFLINE_025.ivf  OFFLINE_025.lbl  OFFLINE_050.ivf  OFFLINE_050.lbl  OFFLINE_075.ivf  OFFLINE_075.lbl  OFFLINE_075.vec  OFFLINE_100.ivf  OFFLINE_100.lbl  OFFLINE_100.vec  OFFLINE_CARD_025.lbl  OFFLINE_CARD_050.lbl  OFFLINE_CARD_075.lbl  OFFLINE_CARD_075.vec  OFFLINE_CARD_100.lbl  OFFLINE_CARD_100.vec  OFFLINE_NOCARD_025.lbl  OFFLINE_NOCARD_025.vec  OFFLINE_NOCARD_050.lbl  OFFLINE_NOCARD_050.vec  OFFLINE_NOCARD_075.lbl  OFFLINE_NOCARD_075.vec  OFFLINE_NOCARD_100.lbl  OFFLINE_NOCARD_100.vec  ONLINE_025.ivf  ONLINE_050.ivf  ONLINE_050.lbl  ONLINE_050.vec  ONLINE_075.ivf  ONLINE_100.ivf  ONLINE_NOCARD_025.lbl  ONLINE_NOCARD_075.lbl  ONLINE_NOCARD_075.vec  ONLINE_NOCARD_100.lbl
src/helpers/: date.rs  mod.rs  partition.rs  vectors.rs
src/modules/: handler.rs  mod.rs
src/modules/fraud/: constants.rs  features.rs  handler.rs  ivf.rs  lsh.rs  mod.rs  routes.rs  service.rs  (+1 more)
src/scripts/: build_index.rs  define_near_ranges.rs
test/: results.json  test.js
tests/: fraud.test.ts  load_test.sh  package-lock.json  package.json  targets.txt  test-plan.md  vitest.config.ts
tests/payloads/: example-payloads.json  legitimate.json  suspicious_high_amount.json  suspicious_impossible_travel.json  suspicious_velocity.json
tests/scripts/: generate-payloads.mjs
