[package]
name = "backend-fight"
version = "0.1.0"
edition = "2024"
default-run = "backend-fight"

[[bin]]
name = "build_index"
path = "scripts/build_index.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"

[dependencies]
mimalloc = { version = "0.1", default-features = false }
axum = "0.8.9"
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1"
rand_distr = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.10", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
