[package]
name = "backend-fight"
version = "0.1.0"
edition = "2024"
default-run = "backend-fight"

[[bin]]
name = "build_index"
path = "src/scripts/build_index.rs"

[[bin]]
name = "define_near_ranges"
path = "src/scripts/define_near_ranges.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"

[dependencies]
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
simd-json = { version = "0.13", features = ["serde_impl"] }
mimalloc = { version = "0.1", default-features = false }
time = "0.1"
